# fast-stack

./: .env.example  .gitignore  README.md  REPLACEME.env  devenv.nix  devenv.yaml  docker-compose.override.yml  docker-compose.yml  readme.md  start.sh
.github/: copilot_instructions.md
.github/_workflows/: production.yml  test.yml
.github/workflows/: master.yml  production.yml  staging.yml  test.yml
services/_api/: api.fa.dockerfile  readme.md
services/_api/db/: alembic.ini
services/_api/scripts/: build-dev.sh  build.sh  db-down.sh  db-revise.sh  db-up.sh  deploy-prod.sh  deploy-stage.sh  develop-proxy.sh  develop.sh  migrate-database.sh  start-prod.sh  start.sh  test.sh  up-db.sh
services/_api/src/: .coveragerc  .dockerignore  pyproject.toml
services/_api/src/app/: main.py
services/_api/src/app/api/v0/: ping.py
services/_api/src/app/core/: config.py
services/_api/src/app/core/security/: auth0.py  secret_manager.py
services/_api/src/app/crud/: base.py  user.py
services/_api/src/app/crud/pagination/: __init__.py  room_log.py
services/_api/src/app/integrations/an_api/: the_api.py
services/_api/src/app/integrations/google/: secret_manager.py
services/_api/src/app/logic/: demo.py
services/_api/src/app/models/: __init__.py
services/_api/src/app/models/validators/: datetime_range.py
services/_api/src/app/schemas/: room.py
services/_api/src/app/schemas/plotly/: plots.py
services/_api/src/app/tests/: conftest.py  test_ping.py
services/_api/src/db/alembic/: env.py
services/_api/src/db/alembic/versions/: d6a8dc21c57d_.py
services/_api/src/db/sql/: base.sql
services/_dash/: dash.flask.dockerfile
services/_dash/notebooks/: test_date.ipynb
services/_dash/src/: .dockerignore
services/_db/: migration.sql
services/_db/alembic/: env.py  script.py.mako
services/_fast_api/scripts/: db-up.sh  develop-local.sh
services/_fast_api/src/: pyproject.toml
services/_flsk_dash/src/: pyproject.toml
services/_ifr_web_1/: web.ngfb.dockerfile
services/_ifr_web_1/app/: angular.json
services/_templates/_fast_api/: fastapi.dockerfile
services/_templates/_grafana/: grafana.dockerfile
services/_templates/_ifr_web_2/: web.srv.dockerfile
services/_templates/_ng_ion/: ng.ion.dockerfile
services/_templates/_ng_ion_a0/: ng.ion.dockerfile
services/_templates/_ng_mat_1/: admin.web.dockerfile
services/_templates/_ng_mat_2/: ng.mat.2.dockerfile
services/_templates/discord_bot/: README.md  main.py  pyproject.toml
services/_templates/fast_api/: fastapi.dockerfile
services/_templates/fast_api/src/: .flake8  pyproject.toml
services/_templates/fast_api/src/app/: main.py
services/_templates/fast_api/src/app/api/: deps.py
services/_templates/fast_api/src/app/api/v0/: ping.py
services/_templates/fast_api/src/app/api/v1/: user.py
services/_templates/fast_api/src/app/core/: config.py  session.py
services/_templates/fast_api/src/app/crud/: __init__.py
services/_templates/fast_api/src/app/integrations/google/: secret_manager.py
services/_templates/fast_api/src/db/: alembic.ini
services/_templates/fast_api/src/db/alembic/versions/: 54738a63b50d_.py
services/_templates/flask_dash/: flask.dash.dockerfile
services/_templates/flask_dash/src/: pyproject.toml
services/_templates/flask_dash/src/app/core/: security.py
services/_templates/flask_dash/src/app/dashboards/: dash1.py
services/_templates/flask_dash/src/app/templates/components/: messages.html
services/_templates/grafana/: grafana.dockerfile
services/_templates/grafana_oss/: grafana.dockerfile
services/_templates/ionic_angular/: ionic.angular.dockerfile
services/_templates/playwright/: playwright.dockerfile
services/_templates/playwright/src/: pyproject.toml
services/_templates/playwright/src/app/: main.py
services/_templates/playwright/src/app/api/: deps.py
services/_templates/playwright/src/app/api/v0/: __init__.py  report.py
services/_templates/playwright/src/app/core/: config.py
services/_templates/playwright/src/app/core/security/: secret_manager.py
services/_templates/playwright/src/app/integrations/: email.py
services/_templates/web_admin/: web.admin.dockerfile
services/_tools/: entrypoint.sh  firebase.dockerfile
services/_web/: readme.md  web.ngfb.dockerfile
services/_web/app/: .pnp.cjs  (+1 more)
services/tools/: firebase.dockerfile
(+493 files in other folders)
