[tool.poetry]
name = "project"
version = "0.0.1"
description = "project API"
authors = ["user <site.com>"]
license = "All Rights Reserved"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
uvicorn = "^0.34.0"
fastapi = "^0.115.11"
sqlmodel = "^0.0.24"
redis = "^4.4.0"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
google-cloud-secret-manager = "^2.23.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
pydantic-settings = "^2.8.1"
google-api-python-client = "^2.164.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.10.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
per-file-ignores = {"__init__.py" = ["F401"]}
